--- a/package.json
+++ b/package.json
@@ -13,11 +13,13 @@
   "author": "Gede Sutarsa",
   "license": "ISC",
   "dependencies": {
-    
     "@types/react": "^16.3.11",
     "@types/react-dom": "^16.0.5",
     "mobile-detect": "^1.4.1",
     "react": "^16.3.2",
-    "react-dom": "^16.3.2"
+    "react-dom": "^16.3.2",
+    "tslint": "^5.10.0",
+    "tslint-react": "^3.5.1",
+    "typescript": "^2.8.3"
   }
 }
