--- a/package.json
+++ b/package.json
@@ -32,16 +32,13 @@
   "author": "Gede Sutarsa",
   "license": "ISC",
   "dependencies": {
-    "@types/react-dom": "^16.0.5",
-    "react": "^16.3.2"
+    
+    "react": "^16.4.0",
+    "react-dom": "^16.4.0"
   },
   "devDependencies": {
-    "@types/react": "^16.3.14",
-    "jest-cli": "^22.4.3",
-    "node-sass-chokidar": "^1.3.0",
-    "npm-run-all": "^4.1.3",
-    "react-docgen-typescript": "^1.4.0",
-    "react-scripts-ts": "^2.15.1",
-    "react-styleguidist": "^7.0.11"
+    "@types/react-dom": "^16.0.5",
+    "@types/react": "^16.3.14"
+    
   }
 }
